--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,15 @@
         "illuminate/support": "4.0.x",
         "illuminate/database": "4.0.x"
     },
+
+    "require-dev": {
+        "phpunit/phpunit": "3.7.*"
+    },
+
     "autoload": {
         "psr-0": {
             "Kalnoy\\Nestedset": "src/"
-        }
+        },
     },
     "minimum-stability": "dev"
 }
