--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,12 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "illuminate/support": "4.0.x",
-        "illuminate/database": "4.0.x"
+        "illuminate/support": ">=4.0,<4.2",
+        "illuminate/database": ">=4.0,<4.2"
     },
 
     "require-dev": {
-        "phpunit/phpunit": "3.7.*"
+        "phpunit/phpunit": "~3.7"
     },
 
     "autoload": {
