--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
 
     "require": {
         "php": ">=5.3.0",
-        "illuminate/support": "4.1.*",
-        "illuminate/database": "4.1.*"
+        "illuminate/support": "~4.1.18",
+        "illuminate/database": "~4.1.18"
     },
 
     "require-dev": {
@@ -25,7 +25,5 @@
         "psr-0": {
             "Kalnoy\\Nestedset": "src/"
         }
-    },
-
-    "minimum-stability": "dev"
+    }
 }
