--- a/composer.json
+++ b/composer.json
@@ -13,17 +13,16 @@
 
     "require": {
         "php": ">=5.4.0",
-        "illuminate/support": "~4.1",
-        "illuminate/database": "~4.1"
-    },
-
-    "require-dev": {
-        "phpunit/phpunit": "~3.7"
+        "illuminate/support": "5.0.*",
+        "illuminate/database": "5.0.*",
+        "illuminate/events": "5.0.*"
     },
 
     "autoload": {
         "psr-0": {
             "Kalnoy\\Nestedset": "src/"
         }
-    }
+    },
+
+    "minimum-stability": "dev"
 }
