--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     },
 
     "autoload": {
-        "psr-0": { "Kalnoy\\Nestedset": "src/" }
+        "psr-4": { "Kalnoy\\Nestedset\\": "src/" }
     },
 
     "minimum-stability": "stable"
