--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,5 @@
         "illuminate/events": "5.0.*"
     },
 
-    "autoload": { "psr-4": { "Kalnoy\\Nestedset\\": "src/" } },
-
-    "minimum-stability": "dev"
+    "autoload": { "psr-4": { "Kalnoy\\Nestedset\\": "src/" } }
 }
