--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,10 @@
     ],
 
     "require": {
-        "php": ">=5.4.0",
-        "illuminate/support": ">=4.1,<5.2.0",
-        "illuminate/database": ">=4.1,<5.2.0",
-        "illuminate/events": ">=4.1,<5.2.0"
+        "php": ">=5.5.0",
+        "illuminate/support": "~5.1.0",
+        "illuminate/database": "~5.1.0",
+        "illuminate/events": "~5.1.0"
     },
 
     "autoload": { "psr-4": { "Kalnoy\\Nestedset\\": "src/" } }
