--- a/composer.json
+++ b/composer.json
@@ -18,5 +18,8 @@
         "illuminate/events": "~5.1.0"
     },
 
-    "autoload": { "psr-4": { "Kalnoy\\Nestedset\\": "src/" } }
+    "autoload": { "psr-4": { "Kalnoy\\Nestedset\\": "src/" } },
+    "require-dev": {
+        "phpunit/phpunit": "^5.1"
+    }
 }
