--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
 
     "require": {
-        "php": ">=5.5.0",
+        "php": ">=5.5.9",
         "illuminate/support": "~5.1.0",
         "illuminate/database": "~5.1.0",
         "illuminate/events": "~5.1.0"
@@ -20,6 +20,6 @@
 
     "autoload": { "psr-4": { "Kalnoy\\Nestedset\\": "src/" } },
     "require-dev": {
-        "phpunit/phpunit": "^5.1"
+        "phpunit/phpunit": ">=4.8"
     }
 }
