--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,13 @@
 
     "require": {
         "php": ">=5.5.9",
-        "illuminate/support": "~5.1.0",
-        "illuminate/database": "~5.1.0",
-        "illuminate/events": "~5.1.0"
+        "illuminate/support": "5.1 - 5.2",
+        "illuminate/database": "5.1 - 5.2",
+        "illuminate/events": "5.1 - 5.2"
     },
 
     "autoload": { "psr-4": { "Kalnoy\\Nestedset\\": "src/" } },
+
     "require-dev": {
         "phpunit/phpunit": ">=4.8"
     }
