--- a/composer.json
+++ b/composer.json
@@ -22,5 +22,11 @@
 
     "require-dev": {
         "phpunit/phpunit": ">=4.8"
+    },
+
+    "extra": {
+        "branch-alias": {
+            "dev-master": "v5.0.x-dev"
+        }
     }
 }
