--- a/composer.json
+++ b/composer.json
@@ -21,14 +21,12 @@
     "autoload": { "psr-4": { "Kalnoy\\Nestedset\\": "src/" } },
 
     "require-dev": {
-        "phpunit/phpunit": ">=4.8"
+        "phpunit/phpunit": "4.8.*"
     },
 
     "extra": {
         "branch-alias": {
             "dev-master": "v4.1.x-dev"
         }
-    },
-
-    "minimum-stability": "dev"
+    }
 }
