--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,16 @@
 
     "require": {
         "php": ">=5.5.9",
-        "illuminate/support": "5.2.*|5.3.x",
-        "illuminate/database": "5.2.*|5.3.x",
-        "illuminate/events": "5.2.*|5.3.x"
+        "illuminate/support": "5.2.* | 5.3.* | 5.4.*",
+        "illuminate/database": "5.2.* | 5.3.* | 5.4.*",
+        "illuminate/events": "5.2.* | 5.3.* | 5.4.*"
     },
 
-    "autoload": { "psr-4": { "Kalnoy\\Nestedset\\": "src/" } },
+    "autoload": { 
+        "psr-4": { 
+            "Kalnoy\\Nestedset\\": "src/" 
+        } 
+    },
 
     "require-dev": {
         "phpunit/phpunit": "4.8.*"
