--- a/composer.json
+++ b/composer.json
@@ -13,20 +13,22 @@
 
     "require": {
         "php": ">=5.5.9",
-        "illuminate/support": "5.2.* | 5.3.* | 5.4.*",
-        "illuminate/database": "5.2.* | 5.3.* | 5.4.*",
-        "illuminate/events": "5.2.* | 5.3.* | 5.4.*"
+        "illuminate/support": "5.0 - 5.5",
+        "illuminate/database": "5.0 - 5.5",
+        "illuminate/events": "5.0 - 5.5"
     },
 
-    "autoload": { 
-        "psr-4": { 
-            "Kalnoy\\Nestedset\\": "src/" 
-        } 
+    "autoload": {
+        "psr-4": {
+            "Kalnoy\\Nestedset\\": "src/"
+        }
     },
 
     "require-dev": {
         "phpunit/phpunit": "4.8.*"
     },
+
+    "minimum-stability": "dev",
 
     "extra": {
         "branch-alias": {
