--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,9 @@
 
     "require": {
         "php": ">=5.5.9",
-        "illuminate/support": "5.2 - 5.5",
-        "illuminate/database": "5.2 - 5.5",
-        "illuminate/events": "5.2 - 5.5"
+        "illuminate/support": "5.2 - 5.6",
+        "illuminate/database": "5.2 - 5.6",
+        "illuminate/events": "5.2 - 5.6"
     },
 
     "autoload": {
@@ -27,6 +27,9 @@
     "require-dev": {
         "phpunit/phpunit": "4.8.*"
     },
+
+    "minimum-stability": "dev",
+    "prefer-stable": true,
 
     "extra": {
         "branch-alias": {
