Add blueprint macros

--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,12 @@
     "extra": {
         "branch-alias": {
             "dev-master": "v4.2.x-dev"
+        },
+
+        "laravel": {
+            "providers": [
+                "Kalnoy\\Nestedset\\NestedSetServiceProvider"
+            ]
         }
     }
 }
